2008-01-25  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c: Update a lot to work with imsettings.
	* src/xinput.[ch]: Remove.

	* src/im-chooser.[ch]: Remove.

	* src/im-chooser-private.h: Remove.

	* src/main.c: clean up the obsolete code.

2008-01-25  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: Update to bring up IM through imsettings.

	* data/xinputinfo.sh.in: new.

2008-01-24  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: Check glib path.

2008-01-23  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: check pkgconfig for x11.

	* README: Add a description for XIM_PROGRAM.

2007-12-27  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.5.5.

2007-12-25  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: rename sr@Latn to sr@latin. (RH#426540)

2007-11-16  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.5.4.

	* src/im-chooser-simple.c: Improve English label. (RH#302491)

	* src/im-chooser.desktop.in.in: Update a bit for GNOME HIG compliant.
	(RH#330431)

2007-10-15  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: remove the obsolete Norwegian translation.

2007-10-11  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.5.3.

	* src/im-chooser-simple.c (im_chooser_simple_instance_init): register
	the config file even if it has an IM_CHOOSER_IGNORE_ME flag.
	(_im_chooser_simple_get_xinput): check a XINPUT_VALUE_IGNORE_ME flag
	instead of looking at the hard-coded name.
	(_im_chooser_simple_get_system_default_im): likewise.
	(_im_chooser_simple_get_current_im): likewise.
	(_im_chooser_simple_set_im_to_list): likewise.

2007-09-18  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.5.2.

	* src/im-chooser-simple.c (_im_chooser_simple_update_im_list): Check
	iter to not be warned.
	(im_chooser_simple_get_widget): unset a toggle button for default, but
	not insensitive.

2007-09-10  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.5.1.
